SERVER-45839 recoverFromOplogUpTo should not invariant if there are no oplog entries to apply between the given range